--- a/configs/default_config.yaml
+++ b/configs/default_config.yaml
@@ -27,6 +27,8 @@ model:
   name: "resnet50"  # Example: You can set it to resnet18, resnet34, etc.
   pretrained: true  # Use pre-trained weights
   num_classes: 6  # Number of classes in the dataset
+  load_checkpoint: false  # Load a pre-trained model checkpoint
+  checkpoint_path: ""  # Path to the model checkpoint
 
 # Loss function configuration
 loss:
@@ -45,6 +47,22 @@ training:
   lr_scheduler:
     name: "step_lr"  # Learning rate scheduler (step_lr, cosine_annealing, etc.)
     step_size: 10  # Step size for scheduler (for step_lr)
+
+testing:
+  pipeline: "default"  # The pipeline to run (e.g., default, retrieval, etc.)
+  list_of_metrics:
+    - type: accuracy
+    - type: f1_score
+    - type: precision
+    - type: recall
+    - type: map@k
+      k: 5
+    - type: precision@k
+      k: 5
+    - type: recall@k
+      k: 5
+    - type: accuracy@k
+      k: 5
 
 # Logging configuration
 logging:
