--- a/configs/multilable_train_config.yaml
+++ b/configs/multilable_train_config.yaml
@@ -9,7 +9,7 @@ data:
     Normal: 3
     Podocytopathy: 4
     Sclerosis: 5
-  batch_size: 32
+  batch_size: 64
   num_workers: 3  # Number of workers to load the data
 
 # Transformation configuration for image preprocessing
@@ -28,8 +28,8 @@ model:
   experiment_name: "multilable"  # Name of the experiment
   pretrained: true  # Use pre-trained weights
   num_classes: 6  # Number of classes in the dataset
-  load_checkpoint: false  # Load a pre-trained model checkpoint
-  checkpoint_path: ""  # Path to the model checkpoint
+  load_checkpoint: true  # Load a pre-trained model checkpoint
+  checkpoint_path: "./artifacts/multilable_resnet50_2025-01-28_03-18-23_checkpoint.pth"  # Path to the model checkpoint
 
 # Loss function configuration
 loss:
@@ -44,7 +44,7 @@ optimizer:
 # Training configuration
 training:
   pipeline: "train_multilabel"  # The pipeline to run (e.g., train, finetune, etc.)
-  epochs: 10  # Number of epochs to train
+  epochs: 60  # Number of epochs to train
   lr_scheduler:
     name: "step_lr"  # Learning rate scheduler (step_lr, cosine_annealing, etc.)
     step_size: 10  # Step size for scheduler (for step_lr)
