--- a/configs/retrieval_test/default_dino_config.yaml
+++ b/configs/retrieval_test/default_dino_config.yaml
@@ -12,7 +12,9 @@ data:
     Sclerosis: 5
   batch_size: 32
   num_workers: 3  # Number of workers to load the data
-
+  suffle_test: false
+  suffle_train: false
+  
 # Transformation configuration for image preprocessing
 transform:
   resize: [224, 224]  # Resize images to 224x224
@@ -24,7 +26,7 @@ transform:
 # Model configuration
 model:
   name: "dino"  # Example: You can set it to resnet18, resnet34, etc.
-  experiment_name: "test"  # Name of the experiment
+  experiment_name: "dino"  # Name of the experiment
   pretrained: true  # Use pre-trained weights
   num_classes: 6  # Number of classes in the dataset
   load_checkpoint: false  # Load a pre-trained model checkpoint
@@ -34,15 +36,17 @@ model:
 
 testing:
   pipeline: "default"  # The pipeline to run (e.g., default, retrieval, etc.)
-  load_embeddings: false  # Load embeddings from disk
-  embeddings_path: "./artifacts/embeddings_dino"  # Path to load embeddings
-  save_embeddings: true  # Save embeddings to disk
+  load_embeddings: true  # Load embeddings from disk
+  embeddings_path: "./artifacts/embeddings_dino_2025-04-12_02-56-06.npz"  # Path to load embeddings
+  save_embeddings: false  # Save embeddings to disk
   embeddings_save_path: "./artifacts/embeddings_dino"  # Path to save embeddings
   list_of_metrics:
     # - type: accuracy
     # - type: f1_score
     # - type: precision
     # - type: recall
+    # - type: map@k
+    #   k_values: [1, 3, 5, 10]
     - type: map@k
       k_values: [1, 3, 5, 10]
     - type: precision@k
