--- a/configs/retrieval_test/default_clip_config.yaml
+++ b/configs/retrieval_test/default_clip_config.yaml
@@ -12,6 +12,8 @@ data:
     Sclerosis: 5
   batch_size: 32
   num_workers: 3  # Number of workers to load the data
+  suffle_test: false
+  suffle_train: false
 
 # Transformation configuration for image preprocessing
 transform:
@@ -24,7 +26,7 @@ transform:
 # Model configuration
 model:
   name: "clip"  # Example: You can set it to resnet18, resnet34, etc.
-  experiment_name: "test"  # Name of the experiment
+  experiment_name: "clip"  # Name of the experiment
   pretrained: true  # Use pre-trained weights
   num_classes: 6  # Number of classes in the dataset
   load_checkpoint: false  # Load a pre-trained model checkpoint
@@ -43,6 +45,8 @@ testing:
     # - type: f1_score
     # - type: precision
     # - type: recall
+    - type: map@k2
+      k_values: [1, 3, 5, 10]
     - type: map@k
       k_values: [1, 3, 5, 10]
     - type: precision@k
