--- a/configs/retrieval_test/default_vit_config.yaml
+++ b/configs/retrieval_test/default_vit_config.yaml
@@ -12,7 +12,9 @@ data:
     Sclerosis: 5
   batch_size: 32
   num_workers: 3  # Number of workers to load the data
-
+  suffle_test: false
+  suffle_train: false
+  
 # Transformation configuration for image preprocessing
 transform:
   resize: [224, 224]  # Resize images to 224x224
@@ -24,7 +26,7 @@ transform:
 # Model configuration
 model:
   name: "vit"  # Example: You can set it to resnet18, resnet34, etc.
-  experiment_name: "test"  # Name of the experiment
+  experiment_name: "vit"  # Name of the experiment
   pretrained: true  # Use pre-trained weights
   num_classes: 6  # Number of classes in the dataset
   load_checkpoint: false  # Load a pre-trained model checkpoint
