--- a/configs/retrieval_test/default_dino_config.yaml
+++ b/configs/retrieval_test/default_dino_config.yaml
@@ -36,17 +36,17 @@ model:
 
 testing:
   pipeline: "default"  # The pipeline to run (e.g., default, retrieval, etc.)
-  load_embeddings: true  # Load embeddings from disk
+  load_embeddings: false  # Load embeddings from disk
   embeddings_path: "./artifacts/embeddings_dino_2025-04-12_02-56-06.npz"  # Path to load embeddings
-  save_embeddings: false  # Save embeddings to disk
+  save_embeddings: true  # Save embeddings to disk
   embeddings_save_path: "./artifacts/embeddings_dino"  # Path to save embeddings
   list_of_metrics:
     # - type: accuracy
     # - type: f1_score
     # - type: precision
     # - type: recall
-    # - type: map@k
-    #   k_values: [1, 3, 5, 10]
+    - type: map@k
+      k_values: [1, 3, 5, 10]
     - type: precision@k
       k_values: [1, 3, 5, 10]
     - type: recall@k
