--- a/configs/retrieval_test/default_dinov2_config.yaml
+++ b/configs/retrieval_test/default_dinov2_config.yaml
@@ -1,6 +1,7 @@
 # Paths and directories for training and testing data
 data:
-  train_dir: "datasets/final/terumo/test"
+  dataset_type: "TerumoImageDataset"  # Specify the dataset type (e.g., terumo, etc.)
+  train_dir: "datasets/final/terumo/train"
   test_dir: "datasets/final/terumo/test"
   class_mapping:
     Crescent: 0
@@ -9,55 +10,36 @@ data:
     Normal: 3
     Podocytopathy: 4
     Sclerosis: 5
-  batch_size: 16
+  batch_size: 32
   num_workers: 3  # Number of workers to load the data
-  dataset_type: "MixedTripletDataset"  
+  suffle_test: false
+  suffle_train: false
   
 # Transformation configuration for image preprocessing
 transform:
   resize: [224, 224]  # Resize images to 224x224
   normalize:
-    mean: [0.485, 0.456, 0.406] # Normalize mean
+    mean: [0.485, 0.456, 0.406]  # Normalize mean
     std: [0.229, 0.224, 0.225]   # Normalize std
   to_tensor: true  # Convert to tensor (default is true)
 
 # Model configuration
 model:
-  name: "triplet_resnet"  # Example: You can set it to resnet18, resnet34, etc.
-  experiment_name: "terumo"  # Name of the experiment
-  embedding_size: 512  # Size of the embedding vector
+  name: "dinov2"  # Example: You can set it to resnet18, resnet34, etc.
+  experiment_name: "dinov2"  # Name of the experiment
   pretrained: true  # Use pre-trained weights
   num_classes: 6  # Number of classes in the dataset
   load_checkpoint: false  # Load a pre-trained model checkpoint
   checkpoint_path: ""  # Path to the model checkpoint
+  model_name: "dinov2_vitl14"  # Specify the ViT model name
 
-# Loss function configuration
-loss:
-  name: "adaptative_triplet"  # Specify the loss function (cross_entropy, etc.)
-
-# Optimizer configuration
-optimizer:
-  name: "adam"  # Specify the optimizer (adam, sgd, etc.)
-  lr: 0.001  # Learning rate
-  weight_decay: 1e-4  # Weight decay for regularization
-
-# Training configuration
-training:
-  pipeline: "train_triplet"  # The pipeline to run (e.g., train, finetune, etc.)
-  epochs: 60  # Number of epochs to train
-  lr_scheduler:
-    name: "step_lr"  # Learning rate scheduler (step_lr, cosine_annealing, etc.)
-    step_size: 10  # Step size for scheduler (for step_lr)
-  list_of_metrics:
-    - type: map@k
-      k_values: [1, 3, 5, 10]
-  val_retrieval:
-    total_db_samples: 40
-    total_query_samples: 6
-    seed: 42
 
 testing:
   pipeline: "default"  # The pipeline to run (e.g., default, retrieval, etc.)
+  load_embeddings: false  # Load embeddings from disk
+  embeddings_path: "./artifacts/embeddings_dinov2_2025-04-12_06-51-14.npz"  # Path to load embeddings
+  save_embeddings: false  # Save embeddings to disk
+  embeddings_save_path: "./artifacts/embeddings_dinov2"  # Path to save embeddings
   list_of_metrics:
     # - type: accuracy
     # - type: f1_score
@@ -71,8 +53,6 @@ testing:
       k_values: [1, 3, 5, 10]
     - type: accuracy@k
       k_values: [1, 3, 5, 10]
-      
-  save_embeddings: false
 
 # Logging configuration
 logging:
