--- a/configs/bracs-resized/retrieval_test/default_dinov2_config.yaml
+++ b/configs/bracs-resized/retrieval_test/default_dinov2_config.yaml
@@ -1,45 +1,46 @@
 # Paths and directories for training and testing data
 data:
-  dataset_type: "TerumoImageDataset"  # Specify the dataset type (e.g., terumo, etc.)
-  train_dir: "datasets/final/terumo/train"
-  test_dir: "datasets/final/terumo/test"
+  dataset_type: "StandardImageDataset"  # Specify the dataset type (e.g., terumo, etc.)
+  train_dir: "datasets/final/bracs-resized/train"
+  test_dir: "datasets/final/bracs-resized/retriv_test"
   class_mapping:
-    Crescent: 0
-    Hypercellularity: 1
-    Membranous: 2
-    Normal: 3
-    Podocytopathy: 4
-    Sclerosis: 5
+    0_N: 0
+    1_PB: 1
+    2_UDH: 2
+    3_FEA: 3
+    4_ADH: 4
+    5_DCIS: 5
+    6_IC: 6
   batch_size: 32
   num_workers: 3  # Number of workers to load the data
   suffle_test: false
   suffle_train: false
-
+  
 # Transformation configuration for image preprocessing
 transform:
   resize: [224, 224]  # Resize images to 224x224
   normalize:
-    mean: [0.485, 0.456, 0.406]  # Normalize mean for ImageNet
-    std: [0.229, 0.224, 0.225]   # Normalize std for ImageNet
+    mean: [0.485, 0.456, 0.406]  # Normalize mean
+    std: [0.229, 0.224, 0.225]   # Normalize std
   to_tensor: true  # Convert to tensor (default is true)
 
 # Model configuration
 model:
-  name: "clip"  # Example: You can set it to resnet18, resnet34, etc.
-  experiment_name: "clip_glomerulo"  # Name of the experiment
+  name: "dinov2"  # Example: You can set it to resnet18, resnet34, etc.
+  experiment_name: "dinov2_bracs_resized"  # Name of the experiment
   pretrained: true  # Use pre-trained weights
-  num_classes: 6  # Number of classes in the dataset
+  num_classes: 7  # Number of classes in the dataset
   load_checkpoint: false  # Load a pre-trained model checkpoint
   checkpoint_path: ""  # Path to the model checkpoint
-  model_name: "openai/clip-vit-base-patch32"  # Specify the ViT model name
+  model_name: "dinov2_vitl14"  # Specify the ViT model name
 
 
 testing:
   pipeline: "default"  # The pipeline to run (e.g., default, retrieval, etc.)
   load_embeddings: false  # Load embeddings from disk
-  embeddings_path: "./artifacts/glomerulo/embeddings_clip"  # Path to load embeddings
-  save_embeddings: true  # Save embeddings to disk
-  embeddings_save_path: "./artifacts/glomerulo/embeddings_clip"  # Path to save embeddings
+  embeddings_path: "./artifacts/bracs_resized/embeddings_dinov2_2025-04-12_06-51-14.npz"  # Path to load embeddings
+  save_embeddings: false  # Save embeddings to disk
+  embeddings_save_path: "./artifacts/bracs_resized/embeddings_dinov2"  # Path to save embeddings
   list_of_metrics:
     # - type: accuracy
     # - type: f1_score
@@ -64,7 +65,7 @@ metric_logging:
   
 # Output configuration
 output:
-  model_dir: "./artifacts/glomerulo"  # Directory to save model artifacts
-  results_dir: "./local_experiments/glomerulo"  # Directory to save results
+  model_dir: "./artifacts/bracs_resized"  # Directory to save model artifacts
+  results_dir: "./local_experiments/bracs_resized"  # Directory to save results
 
 
