update config and results

--- a/configs/glomerulo/retrieval_test/uni_config.yaml
+++ b/configs/glomerulo/retrieval_test/uni_config.yaml
@@ -27,11 +27,11 @@ model:
   num_classes: 6
   pretrained: true
 output:
-  model_dir: ./artifacts/CRC-VAL-HE-7K-splitted
-  results_dir: ./local_experiments/CRC-VAL-HE-7K-splitted
+  model_dir: ./artifacts/glomerulo
+  results_dir: ./local_experiments/glomerulo
 testing:
-  embeddings_path: ./artifacts/CRC-VAL-HE-7K-splitted/embeddings_resnet50
-  embeddings_save_path: ./artifacts/CRC-VAL-HE-7K-splitted/embeddings_resnet50
+  embeddings_path: ./artifacts/glomerulo/embeddings_uni
+  embeddings_save_path: ./artifacts/glomerulo/embeddings_uni
   list_of_metrics:
   - k_values:
     - 1
