--- a/configs/glomerulo/training/uni_fsl_train_config.yaml
+++ b/configs/glomerulo/training/uni_fsl_train_config.yaml
@@ -1,6 +1,6 @@
 # Paths and directories for training and testing data
 data:
-  dataset_type: StandardImageDataset    # Specify the dataset type (e.g., terumo, etc.)
+  dataset_type: FewShotFolderDataset    # Specify the dataset type (e.g., terumo, etc.)
   train_dir: datasets/final/glomerulo/train
   test_dir: datasets/final/glomerulo/test
   class_mapping: {Crescent: 0, Hypercellularity: 1, Membranous: 2, Normal: 3, Podocytopathy: 4,
@@ -12,8 +12,8 @@ data:
 
 # Model configuration
 model:
-  name: uni             # Example: You can set it to resnet18, resnet34, etc.
-  experiment_name: fsl_glomerulo             # Name of the experiment
+  name: uni_fsl           # Example: You can set it to resnet18, resnet34, etc.
+  experiment_name: uni_fsl_glomerulo             # Name of the experiment
   pretrained: true  # Use pre-trained weights
   num_classes: 6  # Number of classes in the dataset
   load_checkpoint: false  # Load a pre-trained model checkpoint
@@ -48,37 +48,37 @@ transform:
   vertical_flip: true  # Apply random vertical flip
   rotation:
     max_angle: 30  # Maximum rotation angle
-    probability: 0.5  # Probability of applying rotation
+    probability: 0.4  # Probability of applying rotation
   color_jitter:
-    brightness: 0.2  # Brightness factor
-    contrast: 0.2  # Contrast factor
-    saturation: 0.2  # Saturation factor
+    brightness: 0.4  # Brightness factor
+    contrast: 0.4  # Contrast factor
+    saturation: 0.4  # Saturation factor
     hue: 0.1  # Hue factor
-    probability: 0.5  # Probability of applying color jitter
-  gaussian_noise:
-    var_limit: [10, 50]  # Variance range for Gaussian noise
-    mean: 0  # Mean for Gaussian noise
-    probability: 0.5  # Probability of applying Gaussian noise
-  gaussian_blur:
-    blur_limit: [3, 7]  # Kernel size limit for Gaussian blur
-    probability: 0.5  # Probability of applying Gaussian blur
+    probability: 0.4  # Probability of applying color jitter
+    gaussian_noise:
+      var_limit: [5.0, 30.0]  # Variance range for Gaussian noise
+      mean: 0.0  # Mean for Gaussian noise
+      probability: 0.4  # Probability of applying Gaussian noise
+    gaussian_blur:
+      blur_limit: [3, 7]  # Kernel size limit for Gaussian blur
+      probability: 0.4  # Probability of applying Gaussian blur
   coarse_dropout:
-    max_holes: 8  # Maximum number of holes
-    max_height: 16  # Maximum height of holes
-    max_width: 16  # Maximum width of holes
+    max_holes: 2  # Maximum number of holes
+    max_height: 56  # Maximum height of holes
+    max_width: 56  # Maximum width of holes
     min_holes: 1  # Minimum number of holes
-    min_height: 4  # Minimum height of holes
-    min_width: 4  # Minimum width of holes
-    probability: 0.5  # Probability of applying coarse dropout
+    min_height: 14  # Minimum height of holes
+    min_width: 14  # Minimum width of holes
+    probability: 0.2  # Probability of applying coarse dropout
   distortion:
-    optical_distortion: 0.5  # Probability of applying optical distortion
-    grid_distortion: 0.5  # Probability of applying grid distortion
-    piecewise_affine: 0.5  # Probability of applying piecewise affine
-    probability: 0.5  # Probability of applying one of the distortions
+    optical_distortion: 0.4  # Probability of applying optical distortion
+    grid_distortion: 0.1  # Probability of applying grid distortion
+    piecewise_affine: 0.4  # Probability of applying piecewise affine
+    probability: 0.3  # Probability of applying one of the distortions
   shift_scale_rotate:
     shift_limit: 0.0625  # Limit for shifting
-    scale_limit: 0.1  # Limit for scaling
-    rotate_limit: 45  # Limit for rotation
+    scale_limit: [-0.2, 0.2]  # Limit for scaling
+    rotate_limit: [-30, 30]  # Limit for rotation
     probability: 0.5  # Probability of applying shift-scale-rotate
   normalize:
     mean: [0.485, 0.456, 0.406]  # Normalize mean for ImageNet
@@ -89,22 +89,22 @@ testing:
   enabled: false  # Enable testing
   pipeline: default    # The pipeline to run (e.g., default, retrieval, etc.)
   load_embeddings: false  # Load embeddings from disk
-  embeddings_path: ./artifacts/glomerulo/embeddings_uni             # Path to load embeddings
-  save_embeddings: true  # Save embeddings to disk
-  embeddings_save_path: ./artifacts/glomerulo/embeddings_uni             # Path to save embeddings
+  embeddings_path: ./artifacts/glomerulo/embeddings_uni_fsl             # Path to load embeddings
+  save_embeddings: false  # Save embeddings to disk
+  embeddings_save_path: ./artifacts/glomerulo/embeddings_uni_fsl             # Path to save embeddings
   list_of_metrics:
     # - type: accuracy
     # - type: f1_score
     # - type: precision
     # - type: recall
-  - type: map@k
-    k_values: [1, 3, 5, 10]
-  - type: precision@k
-    k_values: [1, 3, 5, 10]
-  - type: recall@k
-    k_values: [1, 3, 5, 10]
-  - type: accuracy@k
-    k_values: [1, 3, 5, 10]
+  # - type: map@k
+  #   k_values: [1, 3, 5, 10]
+  # - type: precision@k
+  #   k_values: [1, 3, 5, 10]
+  # - type: recall@k
+  #   k_values: [1, 3, 5, 10]
+  # - type: accuracy@k
+  #   k_values: [1, 3, 5, 10]
 
 # Logging configuration
 logging:
