--- a/configs/templates/default_train_config.yaml
+++ b/configs/templates/default_train_config.yaml
@@ -37,7 +37,8 @@ training:
   lr_scheduler:
     name: "step_lr"  # Learning rate scheduler (step_lr, cosine_annealing, etc.)
     step_size: 10  # Step size for scheduler (for step_lr)
-
+  early_stopping_patience: 10
+  
 # Transformation configuration for image preprocessing
 transform:
   resize: [224, 224]  # Resize images to 224x224
