--- a/configs/glomerulo/training/uni_fsl_no_augm_train_config.yaml
+++ b/configs/glomerulo/training/uni_fsl_no_augm_train_config.yaml
@@ -17,8 +17,8 @@ model:
   experiment_name: uni_fsl_glomerulo             # Name of the experiment
   pretrained: true  # Use pre-trained weights
   num_classes: 6  # Number of classes in the dataset
-  load_checkpoint: false  # Load a pre-trained model checkpoint
-  checkpoint_path: ''  # Path to the model checkpoint
+  load_checkpoint: true  # Load a pre-trained model checkpoint
+  checkpoint_path: 'artifacts/glomerulo/uni_fsl_glomerulo_uni_fsl_2025-04-19_16-53-15_checkpoint.pth'  # Path to the model checkpoint
   model_name: vit_large_patch16_224      # Specify the ViT model name
   n_way: 6 # Number of classes for few-shot learning
   k_shot: 5 # Suport set size per class
