--- a/configs/glomerulo/fsl_test/uni_fsl_no_augm_train_config.yaml
+++ b/configs/glomerulo/fsl_test/uni_fsl_no_augm_train_config.yaml
@@ -9,7 +9,7 @@ data:
   num_workers: 3  # Number of workers to load the data
   suffle_train: false  # Shuffle the training data
   suffle_test: false
-  support_set:
+  support_set__:
     Crescent:
       - datasets/final/glomerulo/train/Crescent/Terumo_Crescent_AZAN/1409085.jpeg
       - datasets/final/glomerulo/train/Crescent/Terumo_Crescent_AZAN/1409141.jpeg
