--- a/configs/CRC-VAL-HE-7K-splitted/fsl_train/uni_fsl_config.yaml
+++ b/configs/CRC-VAL-HE-7K-splitted/fsl_train/uni_fsl_config.yaml
@@ -22,6 +22,8 @@ model:
   n_way: 9
   q_shot: 5
   k_queries: 64 # For few-shot learning, this will be the batch size
+  hidden_dim: 512  # Hidden dimension for FSL encoder
+  embedding_dim: 128  # Embedding dimension for FSL encoder
 
 # Loss function configuration
 loss:
