--- a/configs/templates/retrieval_test/default_model_config.yaml
+++ b/configs/templates/retrieval_test/default_model_config.yaml
@@ -41,19 +41,20 @@ testing:
   embeddings_path: "./artifacts/<dataset>/embeddings_<model_name>"  # Path to load embeddings
   save_embeddings: true  # Save embeddings to disk
   embeddings_save_path: "./artifacts/<dataset>/embeddings_<model_name>"  # Path to save embeddings
+  normalize_embeddings: false  # Normalize embeddings to unit norm (L2 normalization)
   list_of_metrics:
     # - type: accuracy
     # - type: f1_score
     # - type: precision
     # - type: recall
     - type: map@k
-      k_values: [1, 3, 5, 10]
-    - type: precision@k
-      k_values: [1, 3, 5, 10]
-    - type: recall@k
-      k_values: [1, 3, 5, 10]
-    - type: accuracy@k
-      k_values: [1, 3, 5, 10]
+      k_values: [1, 3, 6, 9, 12, 15]
+    # - type: precision@k
+    #   k_values: [1, 3, 5, 10, 15]
+    # - type: recall@k
+    #   k_values: [1, 3, 5, 10, 15]
+    # - type: accuracy@k
+    #   k_values: [1, 3, 5, 10, 15]
 
 # Logging configuration
 logging:
