--- a/configs/glomerulo/retr_test_backone_norm/resnet_config.yaml
+++ b/configs/glomerulo/retr_test_backone_norm/resnet_config.yaml
@@ -35,7 +35,7 @@ testing:
   embeddings_path: ./artifacts/glomerulo/embeddings_resnet          # Path to load embeddings
   save_embeddings: true  # Save embeddings to disk
   embeddings_save_path: ./artifacts/glomerulo/embeddings_resnet          # Path to save embeddings
-  normalize_embeddings: false  # Normalize embeddings to unit norm (L2 normalization)
+  normalize_embeddings: true   # Normalize embeddings to unit norm (L2 normalization)
   list_of_metrics:
     # - type: accuracy
     # - type: f1_score
