--- a/configs/glomerulo/retr_test_backone_norm/phikon_config.yaml
+++ b/configs/glomerulo/retr_test_backone_norm/phikon_config.yaml
@@ -20,21 +20,21 @@ transform:
 
 # Model configuration
 model:
-  name: philkon         # Example: You can set it to resnet18, resnet34, etc.
-  experiment_name: philkon_glomerulo         # Name of the experiment
+  name: phikon          # Example: You can set it to resnet18, resnet34, etc.
+  experiment_name: phikon_glomerulo          # Name of the experiment
   pretrained: true  # Use pre-trained weights
   num_classes: 6  # Number of classes in the dataset
   load_checkpoint: false  # Load a pre-trained model checkpoint
   checkpoint_path: ''  # Path to the model checkpoint
-  model_name: philkon                    # Specify the ViT model name
+  model_name: phikon                     # Specify the ViT model name
 
 
 testing:
   pipeline: default    # The pipeline to run (e.g., default, retrieval, etc.)
   load_embeddings: false  # Load embeddings from disk
-  embeddings_path: ./artifacts/glomerulo/embeddings_philkon         # Path to load embeddings
+  embeddings_path: ./artifacts/glomerulo/embeddings_phikon          # Path to load embeddings
   save_embeddings: true  # Save embeddings to disk
-  embeddings_save_path: ./artifacts/glomerulo/embeddings_philkon         # Path to save embeddings
+  embeddings_save_path: ./artifacts/glomerulo/embeddings_phikon          # Path to save embeddings
   normalize_embeddings: true   # Normalize embeddings to unit norm (L2 normalization)
   list_of_metrics:
     # - type: accuracy
