--- a/configs/ovarian-cancer-splitted/retr_test_backone/phikon2_config.yaml
+++ b/configs/ovarian-cancer-splitted/retr_test_backone/phikon2_config.yaml
@@ -19,21 +19,21 @@ transform:
 
 # Model configuration
 model:
-  name: philkon         # Example: You can set it to resnet18, resnet34, etc.
-  experiment_name: philkon_ovarian-cancer-splitted # Name of the experiment
+  name: phikon2         # Example: You can set it to resnet18, resnet34, etc.
+  experiment_name: phikon2_ovarian-cancer-splitted # Name of the experiment
   pretrained: true  # Use pre-trained weights
   num_classes: 5  # Number of classes in the dataset
   load_checkpoint: false  # Load a pre-trained model checkpoint
   checkpoint_path: ''  # Path to the model checkpoint
-  model_name: philkon                    # Specify the ViT model name
+  model_name: phikon2                    # Specify the ViT model name
 
 
 testing:
   pipeline: default    # The pipeline to run (e.g., default, retrieval, etc.)
   load_embeddings: false  # Load embeddings from disk
-  embeddings_path: ./artifacts/ovarian-cancer-splitted/embeddings_philkon # Path to load embeddings
+  embeddings_path: ./artifacts/ovarian-cancer-splitted/embeddings_phikon2 # Path to load embeddings
   save_embeddings: true  # Save embeddings to disk
-  embeddings_save_path: ./artifacts/ovarian-cancer-splitted/embeddings_philkon # Path to save embeddings
+  embeddings_save_path: ./artifacts/ovarian-cancer-splitted/embeddings_phikon2 # Path to save embeddings
   normalize_embeddings: false  # Normalize embeddings to unit norm (L2 normalization)
   list_of_metrics:
     # - type: accuracy
